Introduce `org.junit.platform.commons.io.Resource`
Resolves #4876.