@@ -23,6 +23,7 @@ import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClass
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClasses;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClassesByName;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClasspathResource;
+import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClasspathResources;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClasspathRoots;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectDirectory;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectFile;
@@ -55,7 +56,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.platform.commons.PreconditionViolationException;
-import org.junit.platform.commons.support.Resource;
+import org.junit.platform.commons.io.Resource;
 import org.junit.platform.commons.test.TestClassLoader;
 import org.junit.platform.commons.util.ReflectionUtils;
 import org.junit.platform.engine.DiscoverySelector;
@@ -306,17 +307,17 @@ class DiscoverySelectorsTests {
 			assertViolatesPrecondition(() -> selectClasspathResource("/   "));
 			assertViolatesPrecondition(() -> selectClasspathResource("\t"));
 			assertViolatesPrecondition(() -> selectClasspathResource("/\t"));
-			assertViolatesPrecondition(() -> selectClasspathResource((Set<Resource>) null));
-			assertViolatesPrecondition(() -> selectClasspathResource(Collections.emptySet()));
-			assertViolatesPrecondition(() -> selectClasspathResource(Collections.singleton(null)));
-			assertViolatesPrecondition(() -> selectClasspathResource(Set.of(new StubResource(null))));
-			assertViolatesPrecondition(() -> selectClasspathResource(Set.of(new StubResource(""))));
+			assertViolatesPrecondition(() -> selectClasspathResources(null));
+			assertViolatesPrecondition(() -> selectClasspathResources(Collections.emptySet()));
+			assertViolatesPrecondition(() -> selectClasspathResources(Collections.singleton(null)));
+			assertViolatesPrecondition(() -> selectClasspathResources(Set.of(new StubResource(null))));
+			assertViolatesPrecondition(() -> selectClasspathResources(Set.of(new StubResource(""))));
 			assertViolatesPrecondition(
-				() -> selectClasspathResource(Set.of(new StubResource("a"), new StubResource("b"))));
+				() -> selectClasspathResources(Set.of(new StubResource("a"), new StubResource("b"))));
 		}
 
 		@Test
-		void selectClasspathResources() {
+		void selectIndividualClasspathResources() {
 			// with unnecessary "/" prefix
 			var selector = selectClasspathResource("/foo/bar/spec.xml");
 			assertEquals("foo/bar/spec.xml", selector.getClasspathResourceName());
@@ -329,7 +330,7 @@ class DiscoverySelectorsTests {
 		@Test
 		void getSelectedClasspathResources() {
 			var selector = selectClasspathResource("org/junit/platform/commons/example.resource");
-			var classpathResources = selector.getClasspathResources();
+			var classpathResources = selector.getResources();
 			assertAll(() -> assertThat(classpathResources).hasSize(1), //
 				() -> assertThat(classpathResources) //
 						.extracting(Resource::getName) //
@@ -340,7 +341,7 @@ class DiscoverySelectorsTests {
 		@Test
 		void getMissingClasspathResources() {
 			var selector = selectClasspathResource("org/junit/platform/commons/no-such-example.resource");
-			assertViolatesPrecondition(selector::getClasspathResources);
+			assertViolatesPrecondition(selector::getResources);
 		}
 
 		@SuppressWarnings("DataFlowIssue")
